# a2a-langchain-adapters

./: .deepsource.toml  .editorconfig  .gitignore  Justfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _build.yml  _coverage.yml  _lint.yml  _test.yml  build_main.yml  build_pr.yml  dependabot-automerge.yml  release.yml
docs/: README.md  configuration.md  getting-started.md  usage.md
src/a2a_langchain_adapters/: __init__.py  auth.py  client_wrapper.py  exceptions.py  runnable.py  types.py
src/langchain_a2a_adapters/: client_wrapper.py  exceptions.py  runnable.py  toolkit.py  types.py
tests/: conftest.py  test_auth.py  test_client_wrapper.py  test_exceptions.py  test_files.py  test_grpc_transport.py  test_resubscribe.py  test_runnable.py  test_toolkit.py  test_types.py
